<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_recover_pass"
    android:clickable="true"

    tools:context="com.foodeze.rider.ActivitiesAndFragments.Activities.RecoverPasswordActivity">


    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewflliper">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBG"
            android:id="@+id/confirmation_code"
            android:orientation="vertical">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_height="55dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="50dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_icon"
                    android:id="@+id/Goback1"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:fontFamily="font/verdana.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recover_pass"
                    android:textSize="15sp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_horizontal|center_vertical" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:fontFamily="font/verdana.ttf"
                    android:id="@+id/tv_fname"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:text="Email"
                    android:paddingLeft="14dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <EditText
                    android:fontFamily="font/verdana.ttf"
                    android:id="@+id/recover_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="40dp"
                    android:layout_toRightOf="@+id/tv_fname"
                    android:background="@color/colorWhite"
                    android:hint="@string/email_hint"
                    android:textSize="14sp"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress"
                    android:paddingLeft="10dp" />


                <Button
                    android:id="@+id/btn_recover"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_below="@+id/recover_email"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/round_shape_btn_login"
                    android:text="@string/recover"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/colorWhite"
                    android:textStyle="normal"
                    android:fontFamily="@font/verdana"
                    android:textSize="13sp"/>

            </RelativeLayout>


        </LinearLayout>



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBG"
        android:id="@+id/main_sign_up"
        android:orientation="vertical">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="55dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon"
                android:id="@+id/Goback2"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:fontFamily="font/verdana.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover_pass"
                android:textSize="15sp"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal|center_vertical" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:fontFamily="font/verdana.ttf"
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="Code"
            android:paddingLeft="14dp"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <EditText
            android:fontFamily="font/verdana.ttf"
            android:id="@+id/code_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@+id/tv_code"
            android:background="@color/colorWhite"
            android:textSize="14sp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingLeft="10dp" />


            <Button
                android:id="@+id/sendcode_btn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@+id/code_edit"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/round_shape_btn_login"
                android:text="Send Code"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorWhite"
                android:textStyle="normal"
                android:fontFamily="@font/verdana"
                android:textSize="13sp"/>

        </RelativeLayout>


    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBG"
            android:orientation="vertical">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_height="55dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="50dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_icon"
                    android:id="@+id/Goback3"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:fontFamily="font/verdana.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textSize="15sp"
                    android:id="@+id/signup_title"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_horizontal|center_vertical" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:fontFamily="font/verdana.ttf"
                        android:id="@+id/tv_lname"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginTop="35dp"
                        android:background="@color/colorWhite"
                        android:gravity="center"
                        android:text="New Password"
                        android:paddingLeft="14dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <EditText
                        android:fontFamily="font/verdana.ttf"
                        android:id="@+id/ed_new_pass"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/ed_old_pass"
                        android:layout_marginTop="35dp"
                        android:layout_toRightOf="@+id/tv_lname"
                        android:background="@color/colorWhite"
                        android:hint="******"
                        android:textSize="14sp"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp" />

                    <TextView
                        android:fontFamily="font/verdana.ttf"
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_below="@+id/ed_new_pass"
                        android:background="@color/colorWhite"
                        android:gravity="center"
                        android:layout_marginTop="1dp"
                        android:text="Confirm Password"
                        android:paddingLeft="14dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <EditText
                        android:fontFamily="font/verdana.ttf"
                        android:id="@+id/ed_confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_below="@+id/ed_new_pass"
                        android:paddingLeft="10dp"
                        android:textSize="14sp"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:layout_marginTop="1dp"
                        android:layout_toRightOf="@+id/tv_email"
                        android:background="@color/colorWhite"
                        android:hint="******"

                        />

                    <Button
                        android:id="@+id/btn_change_pass"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_below="@+id/ed_confirm_pass"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/round_shape_btn_login"
                        android:textColor="@color/colorWhite"
                        android:textStyle="normal"
                        android:text="Change"
                        android:textSize="13sp"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"

                        />
                </RelativeLayout>

            </ScrollView>


        </LinearLayout>


    </ViewFlipper>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/transparent_layer"
        android:visibility="gone"
        android:background="@color/transparent_tint">

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:id="@+id/progressDialog"
        android:visibility="gone"
        android:background="@drawable/round_shape_dialog_white"
        >
        <com.gmail.samehadar.iosdialog.CamomileSpinner
            android:id="@+id/signUpProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:spinnerColor="@color/colorRed"
            app:clockwise="true"

            />
    </RelativeLayout>

</FrameLayout>
